fixed the apparition of an unwanted horizontal scrollbar in some message content

--- a/static/main.scss
+++ b/static/main.scss
@@ -271,6 +271,7 @@ body.mobile #messagescroller {
 	.content {
 		word-wrap: break-word;
 		overflow-y: hidden;
+		overflow-x: hidden;
 		min-height: 20px;
 		line-height: 18px;
 		padding-top: 1px;
@@ -762,8 +763,9 @@ div.radios {
 
 .opener, .closer {
 	position: absolute;
-	left: 50%;
+	left: 0;
 	bottom: 0;
+	width: 100%;
 	height: 13px;
 	text-align: center;
 	cursor: pointer;
